fixed footer resolution on small screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -108,6 +108,11 @@ header a {
   .header_small_title {
     padding: 28px 0 0 0;
   }
+  .footer_small {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+  }
 }
 
 @media screen and (min-width: 769px) {
